feature: add error result page and sorting of the skin list